fix: install numpy and scikit-learn with poetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 requests = "^2.32.3"
+numpy = "^2.0.0"
+scikit-learn = "^1.5.1"
 
 
 [build-system]
